Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66876

Can't use qsTr() in submenu titles on macOS

XMLWordPrintable

    • macOS
    • 923e7c26fde2bc42d04902441691b7f7667460a7

      import QtQuick 2.7
      import QtQuick.Controls 2.3
      import Qt.labs.platform 1.0 as Platform
      
      ApplicationWindow {
          id: root
          visible: true
          width: 640
          height: 480
      
          Platform.MenuBar {
              Platform.Menu {
                  title: "File"
      
                  Platform.Menu {
                      title: "Recent Files"
      
                      Platform.MenuItem {
                          text: "A"
                      }
                      Platform.MenuItem {
                          text: "B"
                      }
                  }
              }
      
              Platform.Menu {
                  title: qsTr("File")
      
                  Platform.Menu {
                      id: subMenu
                      title: qsTr("Recent Files")
      
                      Platform.MenuItem {
                          text: "A"
                      }
                      Platform.MenuItem {
                          text: "B"
                      }
                  }
              }
          }
      }
      

      Works on Windows.

        For Gerrit Dashboard: QTBUG-66876
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes