QQuickPlatformMenu: fix submenu titles not being visible

As with other properties in QQuickPlatformMenu, ensure that we set the
relevant property on the internal QQuickPlatformMenuItem.

Task-number: QTBUG-66876
Change-Id: Ie37d874426200014ea3bb4045bc6b566422221de
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>